--- a/TestProject1/TestProject1.csproj
+++ b/TestProject1/TestProject1.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
     <PackageReference Include="Selenium.Support" Version="4.7.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.7.0" />
+    <PackageReference Include="WebDriver.ChromeDriver.win32" Version="108.0.5359.71" />
+    <PackageReference Include="WebDriverManager" Version="2.16.2" />
   </ItemGroup>
 
 </Project>
